# CulinaryArchivist

./: .env.example  .gitignore  ARCHDOC.md  README.md  SYSTEM_PROMPT.md  app.py  pyproject.toml
culinary_archivist/: claude_client.py  config.py  graph.py  llm_client.py  main.py  ollama_client.py  router.py  state.py
culinary_archivist/agents/: cross_verifier.py  cross_verifier_original.py  discovery.py  express_hitl.py  express_transcribe.py  full_hitl.py  historian.py  indexer.py  pdf_generator.py  quality_evaluator.py  recipe_splitter.py  reflexion_agent.py  restorer.py  stubs.py
culinary_archivist/registry/: american.yaml  belgium_scandinavia_inferred.yaml  cyprus.yaml  cyprus_inferred.yaml  loader.py  north_indian.yaml  rome.yaml  scorer.py  south_india.yaml  south_indian.yaml  thailand_inferred.yaml  turkey.yaml  unknown.yaml
culinary_archivist/tools/: mcp_server.py  registry_tools.py  search_tools.py
